[metadata]
name = ailment
version = attr: ailment.__version__
url = https://github.com/angr/ailment
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = The angr intermediate language.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.8
packages = find:
