[metadata]
name = ailment
version = attr: ailment.__version__
description = The angr intermediate language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/ailment
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
docs =
    furo
    myst-parser
    sphinx
    sphinx-autodoc-typehints
testing =
    pytest
    pytest-xdist
